--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ plotly==6.1.1
 pillow==10.4.0
 bcrypt==4.2.0
 supabase==2.6.0
-postgrest==0.17.0 
+postgrest>=0.14 
 python-dotenv==1.0.1
 openpyxl==3.1.5
 numpy==2.2.5
+
 
